--- a/package.json
+++ b/package.json
@@ -8,32 +8,32 @@
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
     "postbuild": "next-sitemap --config next-sitemap.config.cjs",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "dev:prod": "cross-env NODE_OPTIONS=--no-deprecation rm -rf .next && pnpm build && pnpm start",
+    "dev:prod": "cross-env NODE_OPTIONS=--no-deprecation rm -rf .next && npm run build && npm start",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
-    "ii": "cross-env NODE_OPTIONS=--no-deprecation pnpm --ignore-workspace install",
+    "ii": "cross-env NODE_OPTIONS=--no-deprecation npm install",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "lint:fix": "cross-env NODE_OPTIONS=--no-deprecation next lint --fix",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "reinstall": "cross-env NODE_OPTIONS=--no-deprecation rm -rf node_modules && rm pnpm-lock.yaml && pnpm --ignore-workspace install",
+    "reinstall": "cross-env NODE_OPTIONS=--no-deprecation rm -rf node_modules && rm package-lock.json && npm install",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
-    "test": "pnpm run test:int && pnpm run test:e2e",
-    "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" pnpm exec playwright test --config=playwright.config.ts",
+    "test": "npm run test:int && npm run test:e2e",
+    "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" npx playwright test --config=playwright.config.ts",
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
-    "@payloadcms/admin-bar": "workspace:*",
-    "@payloadcms/db-mongodb": "workspace:*",
-    "@payloadcms/live-preview-react": "workspace:*",
-    "@payloadcms/next": "workspace:*",
-    "@payloadcms/payload-cloud": "workspace:*",
-    "@payloadcms/plugin-form-builder": "workspace:*",
-    "@payloadcms/plugin-nested-docs": "workspace:*",
-    "@payloadcms/plugin-redirects": "workspace:*",
-    "@payloadcms/plugin-search": "workspace:*",
-    "@payloadcms/plugin-seo": "workspace:*",
-    "@payloadcms/richtext-lexical": "workspace:*",
-    "@payloadcms/ui": "workspace:*",
+    "@payloadcms/admin-bar": "^3.8.0",
+    "@payloadcms/db-mongodb": "^3.8.0",
+    "@payloadcms/live-preview-react": "^3.8.0",
+    "@payloadcms/next": "^3.8.0",
+    "@payloadcms/payload-cloud": "^3.8.0",
+    "@payloadcms/plugin-form-builder": "^3.8.0",
+    "@payloadcms/plugin-nested-docs": "^3.8.0",
+    "@payloadcms/plugin-redirects": "^3.8.0",
+    "@payloadcms/plugin-search": "^3.8.0",
+    "@payloadcms/plugin-seo": "^3.8.0",
+    "@payloadcms/richtext-lexical": "^3.8.0",
+    "@payloadcms/ui": "^3.8.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -47,46 +47,42 @@
     "lucide-react": "^0.378.0",
     "next": "15.3.3",
     "next-sitemap": "^4.2.3",
-    "payload": "workspace:*",
+    "payload": "^3.8.0",
     "prism-react-renderer": "^2.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.45.4",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@playwright/test": "1.50.0",
     "@tailwindcss/typography": "^0.5.13",
+    "@testing-library/react": "16.3.0",
     "@types/escape-html": "^1.0.2",
     "@types/node": "22.5.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
+    "@vitejs/plugin-react": "4.5.2",
     "autoprefixer": "^10.4.19",
     "copyfiles": "^2.4.1",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
+    "jsdom": "26.1.0",
+    "playwright": "1.50.0",
+    "playwright-core": "1.50.0",
     "postcss": "^8.4.38",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.3",
-    "@playwright/test": "1.50.0",
-    "jsdom": "26.1.0",
-    "@testing-library/react": "16.3.0",
-    "@vitejs/plugin-react": "4.5.2",
-    "playwright": "1.50.0",
-    "playwright-core": "1.50.0",
+    "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.2.3",
-    "typescript": "5.7.3"
+    "vitest": "3.2.3"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0",
-    "pnpm": "^9 || ^10"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "sharp"
-    ]
+    "npm": ">=8.0.0"
   }
 }
